Loading devices from IPAM
* Created config for IPAM tool
* Created function to load IPAM devices
* Added node_modules into .gitignore to not commit node modules
* Init DataService in Main.js

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "git@gitlab.synyx.de:ochs/Synlan.git"
   },
   "author": "Pascal Ochs",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "promise": "^8.0.1"
+  }
 }
